Fix spacing. Add message to investment page. Fix transaction hover color/pointer.

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -14,6 +14,10 @@ html, body {
   margin-top: 40px;
 }
 
+.account-info {
+  margin-bottom: 2.5rem;
+}
+
 h1 .heading-small, h2 .heading-small, h3 .heading-small, h4 .heading-small, h5 .heading-small, h6 .heading-small {
   font-size: 1.7rem;
   color: #999;
@@ -113,12 +117,12 @@ ul.transaction-list li {
   list-style: none;
   margin: 0;
   padding: 0;
-  cursor: pointer;
   padding-bottom: 2rem;
 }
 
 ul.transaction-list .transaction:hover {
   background-color: #EEE;
+  cursor: pointer;
 }
 
 ul.transaction-list li p {
